[gd_scene load_steps=5 format=3 uid="uid://bmckcgeghvkw8"]

[ext_resource type="Texture2D" uid="uid://csdecg82ec7nh" path="res://assets/SNES - Front Mission Gun Hazard JPN - Turret System.png" id="1_bh0uy"]
[ext_resource type="Script" uid="uid://bctdtwvxxeamq" path="res://enemies/turret/turret.gd" id="1_fl0ko"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fl0ko"]
radius = 42.0
height = 144.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w7iid"]
radius = 427.005

[node name="Turret" type="Node2D"]
script = ExtResource("1_fl0ko")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(2.75, 2.75)
texture = ExtResource("1_bh0uy")
region_enabled = true
region_rect = Rect2(14, 139, 53, 32)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fl0ko")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w7iid")

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-68.29, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
